--- a/style.css
+++ b/style.css
@@ -1,12 +1,35 @@
+h1 {
+    text-align: center;
+}
+
+p {
+    display: inline;
+}
+
+
 #grid-container {
     display: grid;
     height: 400px;
     width: 400px;
-
+    gap: 0px 0px;
+    border-style: solid;
+    border-width: 3px;
+    border-radius: 5px;
 }
 
 .grid-space {
-    background: blue;
-    height: 20px;
-    width: 20px;
+    background: white;
+    height: auto;
+    width: auto;
+}
+
+.color-button {
+    border-radius: 5px;
+    color: white;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
